cluster/apps/productivity/nextcloud/linkerd-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: whiteboard-ingress-clients
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: whiteboard
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: whiteboard-ingress-network
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: whiteboard-nextcloud-clients
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: whiteboard
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: whiteboard-nextcloud-clients
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: elasticsearch-nextcloud-clients
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: elasticsearch-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: nextcloud-architecture-clients
