cluster/apps/productivity/nextcloud/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/component: app
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ingress-haproxy
            k8s:app.kubernetes.io/name: haproxy-ingress
        - matchExpressions:
            - key: k8s:app
              operator: In
              values:
                - homepage
                - homepage-client
          matchLabels:
            k8s:io.kubernetes.pod.namespace: productivity
      toPorts:
        - ports:
            - protocol: TCP
              port: "80"
    # Dashboard traffic to a meshed backend is delivered to Linkerd's inbound
    # proxy before the proxy forwards it to the application port.
    - fromEndpoints:
        - matchExpressions:
            - key: k8s:app
              operator: In
              values:
                - homepage
                - homepage-client
          matchLabels:
            k8s:io.kubernetes.pod.namespace: productivity
      toPorts:
        - ports:
            - protocol: TCP
              port: "4143"
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: service-mesh
      toPorts:
        - ports:
            - protocol: TCP
              port: "4191"
